finished about section

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <h1>My Cool Restaurant</h1>
@@ -16,7 +18,33 @@
     </header>
 
     <section id="about">
-        About
+        <img style="height: 500px; width: 500px;"
+            src="https://media.cntraveler.com/photos/5fd81a6dc9587ba158549b17/16:9/w_7183,h_4040,c_limit/Interior_NinaAndRafi121818_43.jpg"
+            alt="beautiful restaurant" />
+
+        <div>
+            <h3>How we got our start</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Convallis a cras semper auctor neque vitae tempus quam. Etiam sit amet nisl purus.
+                Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Sed faucibus turpis in eu mi bibendum.
+                Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Nisl rhoncus mattis rhoncus urna
+                neque viverra justo nec ultrices. Laoreet non curabitur gravida arcu ac tortor dignissim convallis
+                aenean. Proin libero nunc consequat interdum varius sit amet mattis. Proin fermentum leo vel orci porta
+                non. Sed tempus urna et pharetra pharetra. A cras semper auctor neque vitae tempus. Integer vitae justo
+                eget magna fermentum. Tellus at urna condimentum mattis. Arcu non odio euismod lacinia at quis risus.
+                
+                <br />
+
+                Mi quis hendrerit dolor magna eget. Tristique nulla aliquet enim tortor at auctor urna nunc. Praesent
+                semper feugiat nibh sed pulvinar proin gravida hendrerit. Molestie a iaculis at erat. Venenatis cras sed
+                felis eget velit aliquet sagittis. Sed faucibus turpis in eu mi bibendum neque egestas congue. Tempus
+                egestas sed sed risus pretium quam. Convallis convallis tellus id interdum velit laoreet id. Pharetra
+                pharetra massa massa ultricies mi quis hendrerit dolor magna. Eleifend quam adipiscing vitae proin. Sit
+                amet luctus venenatis lectus magna fringilla. Turpis massa tincidunt dui ut ornare. Sed risus pretium
+                quam vulputate dignissim suspendisse in est ante. Lectus nulla at volutpat diam ut venenatis tellus in
+                metus. Vel turpis nunc eget lorem.
+            </p>
+        </div>
     </section>
 
     <section id="menu">
@@ -37,4 +65,5 @@
         <p>Copyright 2023</p>
     </footer>
 </body>
+
 </html>
