finished menu section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 aenean. Proin libero nunc consequat interdum varius sit amet mattis. Proin fermentum leo vel orci porta
                 non. Sed tempus urna et pharetra pharetra. A cras semper auctor neque vitae tempus. Integer vitae justo
                 eget magna fermentum. Tellus at urna condimentum mattis. Arcu non odio euismod lacinia at quis risus.
-                
+
                 <br />
 
                 Mi quis hendrerit dolor magna eget. Tristique nulla aliquet enim tortor at auctor urna nunc. Praesent
@@ -48,7 +48,12 @@
     </section>
 
     <section id="menu">
-        Menu
+        <h3>Menu</h3>
+        <ul>
+            <li>Pizza</li>
+            <li>Spaghetti</li>
+            <li>Cannoli</li>
+        </ul>
     </section>
 
     <section id="contact">
