finished contact section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
     </section>
 
     <section id="contact">
-        Contact
+        <h3>Contact Info:</h3>
+        <address>
+            <p>555 Main Street</p>
+            <p>NYC, NY</p>
+            <a href="tel:5555555555">555-555-5555</a>
+            <a href="mail:me@mycoolrestaurant.com">me@mycoolrestaurant.com</a>
+        </address>
     </section>
 
     <footer>
