--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <title>Document</title>
 </head>
 
@@ -18,11 +19,11 @@
     </header>
 
     <section id="about">
-        <img style="height: 500px; width: 500px;"
+        <img id="banner-image"
             src="https://media.cntraveler.com/photos/5fd81a6dc9587ba158549b17/16:9/w_7183,h_4040,c_limit/Interior_NinaAndRafi121818_43.jpg"
             alt="beautiful restaurant" />
 
-        <div>
+        <div class="text-box">
             <h3>How we got our start</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Convallis a cras semper auctor neque vitae tempus quam. Etiam sit amet nisl purus.
@@ -31,10 +32,8 @@
                 neque viverra justo nec ultrices. Laoreet non curabitur gravida arcu ac tortor dignissim convallis
                 aenean. Proin libero nunc consequat interdum varius sit amet mattis. Proin fermentum leo vel orci porta
                 non. Sed tempus urna et pharetra pharetra. A cras semper auctor neque vitae tempus. Integer vitae justo
-                eget magna fermentum. Tellus at urna condimentum mattis. Arcu non odio euismod lacinia at quis risus.
-
-                <br />
-
+                eget magna fermentum. Tellus at urna condimentum mattis. Arcu non odio euismod lacinia at quis risus.</p>
+                <p>
                 Mi quis hendrerit dolor magna eget. Tristique nulla aliquet enim tortor at auctor urna nunc. Praesent
                 semper feugiat nibh sed pulvinar proin gravida hendrerit. Molestie a iaculis at erat. Venenatis cras sed
                 felis eget velit aliquet sagittis. Sed faucibus turpis in eu mi bibendum neque egestas congue. Tempus
